--- a/index.html
+++ b/index.html
@@ -7,35 +7,65 @@
     <title>Burger Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-secondary">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-gradient fixed-top">
+        <div class="container">
+            <a class="navbar-brand logo" href="#">
+                <i class="fas fa-gem"></i>
+                Burger Hut
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Navbar</a>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+            <div class="collapse navbar-collapse" id="navbarNav2">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About</a>
+                        <a class="nav-link" href="#">Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                        <a class="nav-link" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Cart</a>
-                    </li> 
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-light ms-2" href="#">Cart</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h1>Burger Shop</h1>
+
+    <section class="hero-1 d-flex align-items-center justify-content-center text-white">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-6 mx-auto">
+                    <h1 class="display-3 fw-bold mb-4">Delicious Burgers, Anytime You Crave</h1>
+                    <p class="lead mb-5">“Discover juicy, handcrafted burgers with the perfect blend of flavors. Fresh
+                        ingredients, bold taste, and happiness in every bite.”</p>
+                    <div class="d-flex gap-3 justify-content-center">
+                        <button class="btn btn-primary btn-lg">
+                            <i class="fas fa-rocket me-2"></i>
+                            Order Now
+                        </button>
+                        <button class="btn btn-outline-light btn-lg">
+                            Learn More
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 
 
