--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Product</a>
+                        <a class="nav-link" href="#product">Product</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
@@ -64,6 +64,112 @@
             </div>
         </div>
     </section>
+
+    <div class="container py-5" id="product">
+        <h1 class="text-center mb-5">Burgers</h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/Bacon Lover’s Burger.jpg" class="card-img-top" alt="Product 1">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Bacon Lover’s Burger</h5>
+                        <p class="card-text">Crispy bacon strips layered over juicy beef, <br> cheddar cheese, lettuce, and
+                            tangy smoky barbecue sauce.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/BBQ Smokehouse Burger.jpg" class="card-img-top" alt="Product 2">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">BBQ Smokehouse Burger</h5>
+                        <p class="card-text">Grilled beef patty with smoky barbecue sauce, cheddar cheese, crispy
+                            onions, lettuce, and toasted brioche bun.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col" data-aos="zoom-out-up">
+                <div class="card h-100">
+                    <img src="assets/image/Chicken Crispy Burger.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Chicken Crispy Burger</h5>
+                        <p class="card-text">Golden fried chicken fillet, crunchy lettuce, fresh tomato, tangy mayo, and
+                            soft toasted sesame seed bun.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col" data-aos="zoom-out-up">
+                <div class="card h-100">
+                    <img src="assets/image/Classic Cheeseburger.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Classic Cheeseburger</h5>
+                        <p class="card-text">Juicy beef patty topped with melted cheddar, fresh lettuce, tomato,
+                            pickles, and creamy house-made sauce.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/Double Beef Stack.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Double Beef Stack</h5>
+                        <p class="card-text">Two grilled patties stacked high with cheese, onions, pickles, and smoky
+                            sauce for ultimate flavor satisfaction.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/Fish Fillet Burger.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Fish Fillet Burger</h5>
+                        <p class="card-text">Crispy fish fillet with tartar sauce, <br> fresh lettuce, tomato slices, and
+                            fluffy soft toasted burger bun.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col" data-aos="zoom-out-up">
+                <div class="card h-100">
+                    <img src="assets/image/Mushroom Swiss Burger.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Mushroom Swiss Burger</h5>
+                        <p class="card-text">Sautéed mushrooms with Swiss cheese, <br> caramelized onions, juicy beef patty,
+                            and creamy garlic aioli sauce.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col" data-aos="zoom-out-up">
+                <div class="card h-100">
+                    <img src="assets/image/Spicy Jalapeño Burger.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Spicy Jalapeño Burger</h5>
+                        <p class="card-text">Fiery jalapeños, pepper jack cheese, <br> spicy chipotle mayo, and crisp lettuce
+                            for a bold flavorful punch.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col" data-aos="zoom-out-up">
+                <div class="card h-100">
+                    <img src="assets/image/Veggie Garden Burger.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Veggie Garden Burger</h5>
+                        <p class="card-text">Healthy grilled veggie patty with avocado, fresh greens, tomatoes,
+                            cucumber, and creamy herb-flavored dressing.</p>
+                        <a href="#" class="btn btn-primary">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
