--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                     <img src="assets/image/Bacon Lover’s Burger.jpg" class="card-img-top" alt="Product 1">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Bacon Lover’s Burger</h5>
-                        <p class="card-text">Crispy bacon strips layered over juicy beef, <br> cheddar cheese, lettuce, and
+                        <p class="card-text">Crispy bacon strips layered over juicy beef, <br> cheddar cheese, lettuce,
+                            and
                             tangy smoky barbecue sauce.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -86,7 +87,7 @@
                         <h5 class="card-title fw-bold">BBQ Smokehouse Burger</h5>
                         <p class="card-text">Grilled beef patty with smoky barbecue sauce, cheddar cheese, crispy
                             onions, lettuce, and toasted brioche bun.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -97,7 +98,7 @@
                         <h5 class="card-title fw-bold">Chicken Crispy Burger</h5>
                         <p class="card-text">Golden fried chicken fillet, crunchy lettuce, fresh tomato, tangy mayo, and
                             soft toasted sesame seed bun.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -108,7 +109,7 @@
                         <h5 class="card-title fw-bold">Classic Cheeseburger</h5>
                         <p class="card-text">Juicy beef patty topped with melted cheddar, fresh lettuce, tomato,
                             pickles, and creamy house-made sauce.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -119,7 +120,7 @@
                         <h5 class="card-title fw-bold">Double Beef Stack</h5>
                         <p class="card-text">Two grilled patties stacked high with cheese, onions, pickles, and smoky
                             sauce for ultimate flavor satisfaction.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -128,9 +129,10 @@
                     <img src="assets/image/Fish Fillet Burger.jpg" class="card-img-top" alt="Product 3">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Fish Fillet Burger</h5>
-                        <p class="card-text">Crispy fish fillet with tartar sauce, <br> fresh lettuce, tomato slices, and
+                        <p class="card-text">Crispy fish fillet with tartar sauce, <br> fresh lettuce, tomato slices,
+                            and
                             fluffy soft toasted burger bun.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -139,9 +141,10 @@
                     <img src="assets/image/Mushroom Swiss Burger.jpg" class="card-img-top" alt="Product 3">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Mushroom Swiss Burger</h5>
-                        <p class="card-text">Sautéed mushrooms with Swiss cheese, <br> caramelized onions, juicy beef patty,
+                        <p class="card-text">Sautéed mushrooms with Swiss cheese, <br> caramelized onions, juicy beef
+                            patty,
                             and creamy garlic aioli sauce.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -150,9 +153,10 @@
                     <img src="assets/image/Spicy Jalapeño Burger.jpg" class="card-img-top" alt="Product 3">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Spicy Jalapeño Burger</h5>
-                        <p class="card-text">Fiery jalapeños, pepper jack cheese, <br> spicy chipotle mayo, and crisp lettuce
+                        <p class="card-text">Fiery jalapeños, pepper jack cheese, <br> spicy chipotle mayo, and crisp
+                            lettuce
                             for a bold flavorful punch.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -163,7 +167,7 @@
                         <h5 class="card-title fw-bold">Veggie Garden Burger</h5>
                         <p class="card-text">Healthy grilled veggie patty with avocado, fresh greens, tomatoes,
                             cucumber, and creamy herb-flavored dressing.</p>
-                        <a href="#" class="btn btn-primary">Buy Now</a>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                 </div>
             </div>
