Add Cool Drinks

--- a/index.html
+++ b/index.html
@@ -175,6 +175,73 @@
     </div>
 
 
+    <div class="container py-5">
+        <h1 class="text-center mb-5">Cool Drinks</h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/Classic Cola.jpg" class="card-img-top" alt="Product 1">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Classic Cola</h5>
+                        <p class="card-text">Refreshing fizzy cola with bold taste, perfectly paired with burgers for the ultimate combo.</p>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/Icy Lemonade.jpg" class="card-img-top" alt="Product 2">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Icy Lemonade</h5>
+                        <p class="card-text">Freshly squeezed lemon juice blended with ice, sugar, and soda for a tangy chill.</p>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col" data-aos="zoom-out-up">
+                <div class="card h-100">
+                    <img src="assets/image/Mint Mojito.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Mint Mojito</h5>
+                        <p class="card-text">Cool mint leaves mixed with lime and soda, giving a crisp and refreshing taste.</p>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col" data-aos="zoom-out-up">
+                <div class="card h-100">
+                    <img src="assets/image/Berry Blast.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Berry Blast</h5>
+                        <p class="card-text">A fruity mix of strawberries, blueberries, and raspberries blended into a sweet icy drink.</p>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/Tropical Mango Shake.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Tropical Mango Shake</h5>
+                        <p class="card-text">Creamy mango shake with rich flavor, served chilled for a tropical burger-time delight.</p>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/image/Chocolate Milkshake.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Chocolate Milkshake</h5>
+                        <p class="card-text">Smooth chocolate blended with ice cream and milk, a sweet treat alongside juicy burgers.</p>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
