--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Burger Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -31,7 +32,7 @@
                         <a class="nav-link" href="#product">Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="#aboutUs">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -261,6 +262,21 @@
             </div>
         </div>
     </div>
+
+    <section class="hero-2" id="aboutUs">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-6 mx-auto">
+                    <h1 class="display-3 fw-bold mb-4 text-white m-5 p-3">About Burger Hut</h1>
+                    <p class="lead mb-5 text-white m-5 fs-3">“At <b>Burger Hut</b>, we serve more than just burgers – we
+                        serve happiness!
+                        From sizzling patties to creamy shakes, every bite is crafted with love,
+                        fresh ingredients, and a passion for flavor. Whether you crave classic tastes
+                        or bold new creations, Burger Hut is your go-to spot for ultimate satisfaction.”</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
