--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
     <div class="container py-5" id="product">
-        <h1 class="text-center mb-5 p-3">Burgers</h1>
+        <h1 class="text-center mb-5 p-3 text-white">Burgers</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
                 <div class="card h-100">
@@ -186,7 +186,7 @@
 
 
     <div class="container py-5">
-        <h1 class="text-center mb-5">Cool Drinks</h1>
+        <h1 class="text-center mb-5 text-white">Cool Drinks</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
                 <div class="card h-100">
@@ -277,6 +277,45 @@
             </div>
         </div>
     </section>
+
+        <footer class="mt-auto">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <h5>Location</h5>
+                    <p>123 Main Street, Colombo, Sri Lanka</p>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-decoration-none text-white">Home</a></li>
+                        <li><a href="#product" class="text-decoration-none text-white">Product</a></li>
+                        <li><a href="#" class="text-decoration-none text-white">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <h5>Follow Us</h5>
+                    <ul class="list-inline social-icons">
+                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i class="bi bi-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
+                        </li>
+                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i
+                                    class="bi bi-geo-alt-fill"></i></a>
+                        </li>
+                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i class="bi bi-tiktok"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="mb-4">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p>&copy; 2025 Burger Hut. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
