Add navbar in Contact Page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#aboutUs">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-outline-light ms-2" href="#">Cart</a>
@@ -278,7 +278,7 @@
         </div>
     </section>
 
-        <footer class="mt-auto">
+    <footer class="mt-auto">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3">
@@ -296,14 +296,17 @@
                 <div class="col-md-4 mb-3">
                     <h5>Follow Us</h5>
                     <ul class="list-inline social-icons">
-                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i class="bi bi-facebook"></i></a>
+                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i
+                                    class="bi bi-facebook"></i></a>
                         </li>
-                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
+                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i
+                                    class="bi bi-whatsapp"></i></a>
                         </li>
                         <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i
                                     class="bi bi-geo-alt-fill"></i></a>
                         </li>
-                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i class="bi bi-tiktok"></i></a>
+                        <li class="list-inline-item footerIcon"><a href="#" class="text-white"><i
+                                    class="bi bi-tiktok"></i></a>
                         </li>
                     </ul>
                 </div>
