--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,76 @@
         </div>
     </nav>
 
+    <main>
+        <section class="hero-2">
+            <div class="row m-5 align-items-center d-flex justify-content-center">
+                <div class="col-lg-6 col-md-8 col-sm-10 col-12">
+                    <div class="card m-4 " style="width: 30rem;">
+                        <div class="m-5">
+                            <h1 class="text-center">Contact Details</h1>
+                            <div>
+                                <div class="form-check m-2 ">
+                                    <label for="">Email</label><br>
+                                    <a href="" class="text-decoration-none">bpasindu135@gmail.com</a>
+                                </div>
+                                <div class="form-check m-2">
+                                    <label for="">Phone</label><br>
+                                    <a href="tel:+94786197209" class="text-decoration-none">+94786197209</a>
+                                </div>
+                                <div class="form-check m-2">
+                                    <label for="">Locaion</label><br>
+                                    <a href="" class="text-decoration-none">Sooriyawewa, Sri Lanka</a>
+                                </div>
+                                <div class="form-check m-2">
+                                    <label for="">WhatsApp</label><br>
+                                    <a href="tel:+94786197209" class="text-decoration-none">+94786197209</a>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-cente">
+                                <ul class="list-inline social-icons">
+                                <li class="list-inline-item footerIcon"><a href="#" class="m-4"><i
+                                            class="bi bi-facebook"></i></a>
+                                </li>
+                                <li class="list-inline-item footerIcon"><a href="#" class="text-success m-4"><i
+                                            class="bi bi-whatsapp"></i></a>
+                                </li>
+                                <li class="list-inline-item footerIcon"><a href="#" class="text-black m-4"><i
+                                            class="bi bi-geo-alt-fill"></i></a>
+                                </li>
+                                <li class="list-inline-item footerIcon"><a href="#" class="text-black m-4"><i
+                                            class="bi bi-tiktok"></i></a>
+                                </li>
+                            </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-8 col-sm-10 col-12">
+                    <div class="card m-4" style="width: 30rem;">
+                        <div class="text-black m-5">
+                            <h1 class="text-center">Send Message</h1>
+                            <div class="m-1">
+                                <label for="">Name</label><br>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="m-1">
+                                <label for="">Email</label><br>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="m-1">
+                                <label for="">Message</label><br>
+                                <textarea name="" id="" class="form-control"></textarea>
+                            </div>
+                            <div class="text-end">
+                                <button type="submit" class="btn btn-primary rounded-5 w-25">Send</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
