--- a/index.html
+++ b/index.html
@@ -71,113 +71,113 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/Bacon Lover’s Burger.jpg" class="card-img-top" alt="Product 1">
+                    <img src="assets/image/Bacon Lover’s Burger.jpg" class="card-img-top" alt="Product 1" id="image1">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Bacon Lover’s Burger</h5>
+                        <h5 class="card-title fw-bold" id="name1">Bacon Lover’s Burger</h5>
                         <p class="card-text">Crispy bacon strips layered over juicy beef, <br> cheddar cheese, lettuce,
                             and
                             tangy smoky barbecue sauce.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1120.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price1">Rs.1120.00</h4>
+                        <button class="btn btn-primary" id="buy1" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
-                </div>
+                </div> 
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/BBQ Smokehouse Burger.jpg" class="card-img-top" alt="Product 2">
+                    <img src="assets/image/BBQ Smokehouse Burger.jpg" class="card-img-top" alt="Product 2" id="image2">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">BBQ Smokehouse Burger</h5>
+                        <h5 class="card-title fw-bold" id="name2">BBQ Smokehouse Burger</h5>
                         <p class="card-text">Grilled beef patty with smoky barbecue sauce, cheddar cheese, crispy
                             onions, lettuce, and toasted brioche bun.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1250.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price2">Rs.1250.00</h4>
+                        <button class="btn btn-primary" id="buy2" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
-                    <img src="assets/image/Chicken Crispy Burger.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Chicken Crispy Burger.jpg" class="card-img-top" alt="Product 3" id="image3">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Chicken Crispy Burger</h5>
+                        <h5 class="card-title fw-bold" id="name3">Chicken Crispy Burger</h5>
                         <p class="card-text">Golden fried chicken fillet, crunchy lettuce, fresh tomato, tangy mayo, and
                             soft toasted sesame seed bun.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1300.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price3">Rs.1300.00</h4>
+                        <button class="btn btn-primary" id="buy3" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
-                    <img src="assets/image/Classic Cheeseburger.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Classic Cheeseburger.jpg" class="card-img-top" alt="Product 3" id="image4">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Classic Cheeseburger</h5>
+                        <h5 class="card-title fw-bold" id="name4">Classic Cheeseburger</h5>
                         <p class="card-text">Juicy beef patty topped with melted cheddar, fresh lettuce, tomato,
                             pickles, and creamy house-made sauce.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1250.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price4">Rs.1250.00</h4>
+                        <button class="btn btn-primary" id="buy4" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/Double Beef Stack.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Double Beef Stack.jpg" class="card-img-top" alt="Product 3" id="image5">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Double Beef Stack</h5>
+                        <h5 class="card-title fw-bold" id="name5">Double Beef Stack</h5>
                         <p class="card-text">Two grilled patties stacked high with cheese, onions, pickles, and smoky
                             sauce for ultimate flavor satisfaction.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1000.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price5">Rs.1000.00</h4>
+                        <button class="btn btn-primary" id="buy5" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/Fish Fillet Burger.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Fish Fillet Burger.jpg" class="card-img-top" alt="Product 3" id="image6">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Fish Fillet Burger</h5>
+                        <h5 class="card-title fw-bold" id="name6">Fish Fillet Burger</h5>
                         <p class="card-text">Crispy fish fillet with tartar sauce, <br> fresh lettuce, tomato slices,
                             and
                             fluffy soft toasted burger bun.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1150.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price6">Rs.1150.00</h4>
+                        <button class="btn btn-primary" id="buy6" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
-                    <img src="assets/image/Mushroom Swiss Burger.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Mushroom Swiss Burger.jpg" class="card-img-top" alt="Product 3" id="image7">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Mushroom Swiss Burger</h5>
+                        <h5 class="card-title fw-bold" id="name7">Mushroom Swiss Burger</h5>
                         <p class="card-text">Sautéed mushrooms with Swiss cheese, <br> caramelized onions, juicy beef
                             patty,
                             and creamy garlic aioli sauce.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1450.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price7">Rs.1450.00</h4>
+                        <button class="btn btn-primary" id="buy7" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
-                    <img src="assets/image/Spicy Jalapeño Burger.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Spicy Jalapeño Burger.jpg" class="card-img-top" alt="Product 3" id="image8">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Spicy Jalapeño Burger</h5>
+                        <h5 class="card-title fw-bold" id="name8">Spicy Jalapeño Burger</h5>
                         <p class="card-text">Fiery jalapeños, pepper jack cheese, <br> spicy chipotle mayo, and crisp
                             lettuce
                             for a bold flavorful punch.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1500.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price8">Rs.1500.00</h4>
+                        <button class="btn btn-primary" id="buy8" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
-                    <img src="assets/image/Veggie Garden Burger.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Veggie Garden Burger.jpg" class="card-img-top" alt="Product 3" id="image9">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Veggie Garden Burger</h5>
+                        <h5 class="card-title fw-bold" id="name9">Veggie Garden Burger</h5>
                         <p class="card-text">Healthy grilled veggie patty with avocado, fresh greens, tomatoes,
                             cucumber, and creamy herb-flavored dressing.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.1650.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price9">Rs.1650.00</h4>
+                        <button class="btn btn-primary" id="buy9" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -190,73 +190,73 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/Classic Cola.jpg" class="card-img-top" alt="Product 1">
+                    <img src="assets/image/Classic Cola.jpg" class="card-img-top" alt="Product 1" id="image10">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Classic Cola</h5>
+                        <h5 class="card-title fw-bold" id="name10">Classic Cola</h5>
                         <p class="card-text">Refreshing fizzy cola with bold taste, perfectly paired with burgers for
                             the ultimate combo.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.250.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price10">Rs.250.00</h4>
+                        <button class="btn btn-primary" id="buy10" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/Icy Lemonade.jpg" class="card-img-top" alt="Product 2">
+                    <img src="assets/image/Icy Lemonade.jpg" class="card-img-top" alt="Product 2" id="image11">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Icy Lemonade</h5>
+                        <h5 class="card-title fw-bold" id="name11">Icy Lemonade</h5>
                         <p class="card-text">Freshly squeezed lemon juice blended with ice, sugar, and soda for a tangy
                             chill.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.350.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price11">Rs.350.00</h4>
+                        <button class="btn btn-primary" id="buy11" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
-                    <img src="assets/image/Mint Mojito.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Mint Mojito.jpg" class="card-img-top" alt="Product 3" id="image12">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Mint Mojito</h5>
+                        <h5 class="card-title fw-bold" id="name12">Mint Mojito</h5>
                         <p class="card-text">Cool mint leaves mixed with lime and soda, giving a crisp and refreshing
                             taste.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.350.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price12">Rs.350.00</h4>
+                        <button class="btn btn-primary" id="buy12" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col" data-aos="zoom-out-up">
                 <div class="card h-100">
-                    <img src="assets/image/Berry Blast.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Berry Blast.jpg" class="card-img-top" alt="Product 3" id="image13">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Berry Blast</h5>
+                        <h5 class="card-title fw-bold" id="name13">Berry Blast</h5>
                         <p class="card-text">A fruity mix of strawberries, blueberries, and raspberries blended into a
                             sweet icy drink.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.450.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price13">Rs.450.00</h4>
+                        <button class="btn btn-primary" id="buy13" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/Tropical Mango Shake.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Tropical Mango Shake.jpg" class="card-img-top" alt="Product 3" id="image14">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Tropical Mango Shake</h5>
+                        <h5 class="card-title fw-bold" id="name14">Tropical Mango Shake</h5>
                         <p class="card-text">Creamy mango shake with rich flavor, served chilled for a tropical
                             burger-time delight.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.600.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price14">Rs.600.00</h4>
+                        <button class="btn btn-primary" id="buy14" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="assets/image/Chocolate Milkshake.jpg" class="card-img-top" alt="Product 3">
+                    <img src="assets/image/Chocolate Milkshake.jpg" class="card-img-top" alt="Product 3" id="image15">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Chocolate Milkshake</h5>
+                        <h5 class="card-title fw-bold" id="name15">Chocolate Milkshake</h5>
                         <p class="card-text">Smooth chocolate blended with ice cream and milk, a sweet treat alongside
                             juicy burgers.</p>
-                        <h4 class="card-title fw-bold text-success">Rs.750.00</h4>
-                        <button class="btn btn-primary">Buy Now</button>
+                        <h4 class="card-title fw-bold text-success" id="price15">Rs.750.00</h4>
+                        <button class="btn btn-primary" id="buy15" onclick="buyNow(this.id)">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -329,6 +329,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
+        <script src="assets/js/home.js"></script>
 </body>
 
 </html>
