--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-outline-light ms-2" href="#">Cart</a>
+                        <a class="btn btn-outline-light ms-2" href="cart.html">Cart</a>
                     </li>
                 </ul>
             </div>
