--- a/cart.html
+++ b/cart.html
@@ -78,7 +78,7 @@
                                         </div>
 
                                         <button type="button" data-mdb-button-init data-mdb-ripple-init
-                                            class="btn btn-dark btn-block btn-lg" data-mdb-ripple-color="dark">Buy
+                                            class="btn btn-dark btn-block btn-lg" data-mdb-ripple-color="dark" onclick="buyNow()">Buy
                                             Now</button>
                                     </div>
                                 </div>
